# BeanChatCommon

./: CMakeLists.txt
crypto/: Crypto.cpp  Crypto.h
protocol/: Packet.h  PacketHelpers.h  PacketType.h  Packets.h  ProtocolLimits.h  ProtocolVersion.h  commonTypes.h
protocol/packets/: ChannelPackets.h  FilePackets.h  LoginPackets.h  MessagePackets.h  ServerPackets.h  UdpPacekts.h  UserPackets.h
